--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="com.android.crocodile"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="7"
+                android:maxSdkVersion="19"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name=".activities.StartActivity"
                   android:label="@string/app_name">
