--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.crocodile"
-          android:versionCode="1"
+          package="com.card.crocodile"
+          android:versionCode="3"
           android:versionName="1.0">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="19"
-                android:maxSdkVersion="19"/>
+                android:maxSdkVersion="21"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="com.crocodile.activities.StartActivity"
+        <activity android:name="com.card.crocodile.activities.StartActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.crocodile.activities.NumberOfPlayersActivity"></activity>
-        <activity android:name="com.crocodile.activities.NameOfPlayersActivity"></activity>
-        <activity android:name="com.crocodile.activities.ChoosePlayerActivity"></activity>
-        <activity android:name="com.crocodile.activities.ActiveCardActivity"></activity>
+        <activity android:name="com.card.crocodile.activities.NumberOfPlayersActivity"></activity>
+        <activity android:name="com.card.crocodile.activities.NameOfPlayersActivity"></activity>
+        <activity android:name="com.card.crocodile.activities.ChoosePlayerActivity"></activity>
+        <activity android:name="com.card.crocodile.activities.ActiveCardActivity"></activity>
+
+        <activity android:name="com.startapp.android.publish.list3d.List3DActivity"
+                  android:theme="@android:style/Theme" />
+
+        <activity android:name="com.startapp.android.publish.OverlayActivity"
+                  android:theme="@android:style/Theme.Translucent"
+                  android:configChanges="orientation|keyboardHidden|screenSize" />
+
+        <activity android:name="com.startapp.android.publish.FullScreenActivity"
+                  android:theme="@android:style/Theme"
+                  android:configChanges="orientation|keyboardHidden|screenSize" />
     </application>
 </manifest>
